# xlfg

./: .gitattributes  .gitignore  AGENTS.md  NEXT_AGENT_CONTEXT.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/skills/xlfg/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  benchmarking.md  branch-safe-knowledge.md  claude-code-2026-compatibility.md  claude-hooks.md  deer-flow-harness-review.md  merge-friendly-knowledge.md  philosophy.md  planning-autonomy-2026-refresh.md  query-understanding-and-root-solution.md  research-notes.md  subagent-completion-hardening-2026.md  subagent-hardening-2026.md  testing-before-coding-and-practical-proof.md  using-with-other-agents.md  xlfg-debug-design-notes.md
docs/xlfg/: current-state.md  index.md  meta.json
docs/xlfg/knowledge/: commands.json  current-state.md  decision-log.md  failure-memory.md  harness-rules.md  ledger-schema.md  ledger.jsonl  ledger.md  patterns.md  quality-bar.md  queries.md  testing.md  ux-flows.md
docs/xlfg/migrations/: 2.7.1-to-2.8.1.md
docs/xlfg/runs/: README.md
evals/intent/: README.md  context-missing-data-task.json  messy-bugfix-bundle.json  research-or-build-ambiguity.json  underspecified-ui-fix.json
plugins/xlfg-engineering/: CHANGELOG.md  CLAUDE.md  README.md
plugins/xlfg-engineering/agents/: xlfg-context.md  (+3 more)
scripts/: lint_plugin.py
tests/: test_audit_harness.py  test_codex_plugin.py  test_ledger_append.py  test_phase_gate.py  test_phase_tick.py  test_post_mortem.py  test_render_workboard.py  test_subagent_stop_guard.py  test_xlfg.py  test_xlfg_debug.py  test_xlfg_v6.py
xlfg/: __init__.py  audit.py  cli.py  contracts.py  detect.py  doctor.py  gitmeta.py  intent_eval.py  knowledge.py  recall.py  runs.py  scaffold.py  util.py  verify.py
(+194 files in other folders)
