[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlfg"
version = "2.0.1"
description = "Diagnosis-first SDLC harness for agentic software engineering"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "xlfg" }
]
keywords = ["agentic", "software-engineering", "workflow", "verification", "cli", "compound"]
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.scripts]
xlfg = "xlfg.cli:main"

[tool.setuptools]
packages = ["xlfg"]
