[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlfg"
version = "2.7.1"
description = "Skill-first, autonomous, proof-first SDLC harness for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "xlfg" }
]
keywords = ["agentic", "software-engineering", "workflow", "verification", "cli", "skills", "claude-code"]
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.scripts]
xlfg = "xlfg.cli:main"

[tool.setuptools]
packages = ["xlfg"]
